Used the correct working image and deleted the broken one.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html {
 }
 
 #home {
-    background-image: url('https://live.staticflickr.com/65535/52259221868_8d72be90da_3k.jpg');
+    background-image: url('https://raw.githubusercontent.com/moonjchung/portfolio-home/refs/heads/main/assets/images/52259221868_8d72be90da_3k.jpg');
 }
 
 /* Mobile Menu Animation */
